--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -45,6 +45,10 @@
   --z-tooltip: 10;
   --z-fixed: 100;
   --z-modal: 1000;
+  --default-color: #333;
+  --background-color: #f9f9f9;
+  --accent-color: #007bff;
+  --contrast-color: #fff;
 }
 
 @media screen and (min-width: 968px) {
@@ -151,6 +155,11 @@ img {
   max-width: 768px;
   margin-left: var(--mb-1-5);
   margin-right: var(--mb-1-5);
+}
+
+.hero .container1 {
+  position: relative;
+  z-index: 3;
 }
 
 .grid {
@@ -963,55 +972,81 @@ img {
 }
 
 /*==================== CONTACT ME ====================*/
-.contact__container {
-  row-gap: 3rem;
-  /* center */
+.contact1 .info-item+.info-item {
+  margin-top: 40px;
+}
+
+.contact1 .info-item i {
+  color: var(--accent-color);
+  background: color-mix(in srgb, var(--accent-color), transparent 92%);
+  font-size: 20px;
+  width: 44px;
+  height: 44px;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  border-radius: 50px;
+  transition: all 0.3s ease-in-out;
+  margin-right: 15px;
 }
 
-.contact__information {
-  display: flex;
-  margin-bottom: var(--mb-2);
+.contact1 .info-item h3 {
+  padding: 0;
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 5px;
 }
 
-.contact__icon {
-  font-size: 2rem;
-  color: var(--first-color);
-  margin-right: var(--mb-0-75);
+.contact1 .info-item p {
+  padding: 0;
+  margin-bottom: 0;
+  font-size: 14px;
 }
 
-.contact__title {
-  font-size: var(--h3-font-size);
-  font-weight: var(--font-medium);
+.contact1 .info-item:hover i {
+  background: var(--accent-color);
+  color: var(--contrast-color);
 }
 
-.contact__subtitle {
-  font-size: var(--small-font-size);
-  color: var(--text-color-light);
+.contact1 .php-email-form {
+  height: 100%;
 }
 
-.contact__content {
-  background-color: var(--input-color);
-  border-radius: .5rem;
-  padding: .75rem 1rem .25rem;
+.contact1 .php-email-form input[type=text],
+.contact1 .php-email-form input[type=email],
+.contact1 .php-email-form textarea {
+  font-size: 14px;
+  padding: 10px 15px;
+  box-shadow: none;
+  border-radius: 0;
+  color: var(--default-color);
+  background-color: color-mix(in srgb, var(--background-color), transparent 50%);
+  border-color: color-mix(in srgb, var(--default-color), transparent 80%);
 }
 
-.contact__label {
-  font-size: var(--smaller-font-size);
-  color: var(--title-color);
+.contact1 .php-email-form input[type=text]:focus,
+.contact1 .php-email-form input[type=email]:focus,
+.contact1 .php-email-form textarea:focus {
+  border-color: var(--accent-color);
 }
 
-.contact__input {
-  width: 100%;
-  background-color: var(--input-color);
-  color: var(--text-color);
-  font-family: var(--body-font);
-  font-size: var(--normal-font-size);
-  border: none;
-  outline: none;
-  padding: .25rem .5rem .5rem 0;
+.contact1 .php-email-form input[type=text]::placeholder,
+.contact1 .php-email-form input[type=email]::placeholder,
+.contact1 .php-email-form textarea::placeholder {
+  color: color-mix(in srgb, var(--default-color), transparent 70%);
+}
+
+.contact1 .php-email-form button[type=submit] {
+  color: var(--contrast-color);
+  background: var(--accent-color);
+  border: 0;
+  padding: 10px 30px;
+  transition: 0.4s;
+  border-radius: 50px;
+}
+
+.contact1 .php-email-form button[type=submit]:hover {
+  background: color-mix(in srgb, var(--accent-color), transparent 25%);
 }
 
 /*==================== Blog =====================*/
@@ -1363,4 +1398,21 @@ img {
   .contact__inputs {
     grid-template-columns: repeat(2, 1fr);
   }
+}
+
+.section-title1 {
+  text-align: center;
+  padding-bottom: 60px;
+  position: relative;
+}
+
+.hero .container1 {
+  position: relative;
+  z-index: 3;
+}
+.section1 {
+  color: var(--default-color);
+  background-color: var(--background-color);
+  padding: 60px 0;
+  overflow: clip;
 }
